--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.637.0",
     "@aws-sdk/lib-dynamodb": "^3.637.0",
+    "cors": "^2.8.5",
     "serverless-http": "^3.2.0",
     "serverless-offline": "^13.7.0"
   }
